--- a/styles/include.scss
+++ b/styles/include.scss
@@ -4,3 +4,6 @@ $tertiary_color: #1e196f;
 $gray_900_color: #111827;
 $black_color: #000000;
 $white_color: #ffffff;
+$x11_gray_color: #bbbbbb;
+$bright_gray_color: #eeeeee;
+$gunmetal_color: #2d3436;
