--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -34,6 +34,13 @@
     border-radius: 6px;
 }
 
+.slide_image {
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
 .title {
     font-size: 18px;
     font-weight: 600;
