--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -50,11 +50,19 @@
 .service {
     padding-top: 40px;
     padding-bottom: 40px;
+    opacity: 0;
+    position: relative;
+    top: 100px;
+    transition: opacity 1.5s, top 1.5s;
 }
 
 .portfolio {
     padding-top: 40px;
     padding-bottom: 80px;
+    opacity: 0;
+    position: relative;
+    top: 100px;
+    transition: opacity 1.5s, top 1.5s;
 }
 
 .detail_btn {
