--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -30,8 +30,20 @@
     }
 }
 
-.image {
-    border-radius: 6px;
+.image_container {
+    width: 100%;
+
+    // &::after {
+    //     content: "";
+    //     display: block;
+    //     padding-bottom: 100%;
+    // }
+
+    > img {
+        width: 100%;
+        height: 100%;
+        border-radius: 6px;
+    }
 }
 
 .slide_image {
