In header, title_bar component is added.

--- a/styles/include.scss
+++ b/styles/include.scss
@@ -7,3 +7,7 @@ $white_color: #ffffff;
 $x11_gray_color: #bbbbbb;
 $bright_gray_color: #eeeeee;
 $gunmetal_color: #2d3436;
+$chinease_silver_color: #cccccc;
+
+$common_box_shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
