--- a/styles/components/app-header.module.scss
+++ b/styles/components/app-header.module.scss
@@ -2,14 +2,29 @@
 
 .container {
     position: sticky;
-    top: 0px;
+    top: -58px;
+    z-index: 100;
+}
+
+.bar {
     height: 58px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     background-color: $white_color;
-    z-index: 100;
+}
+
+.title_bar {
+    height: 58px;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: $white_color;
+    border-top: 1px solid $chinease_silver_color;
+    border-bottom: 1px solid $chinease_silver_color;
 }
 
 .logo {
