--- a/styles/pages/contact.module.scss
+++ b/styles/pages/contact.module.scss
@@ -23,8 +23,7 @@
     margin-bottom: 40px;
     box-sizing: content-box;
     overflow: hidden;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    box-shadow: $common_box_shadow;
 }
 
 .map {
