--- a/styles/include.scss
+++ b/styles/include.scss
@@ -8,6 +8,9 @@ $x11_gray_color: #bbbbbb;
 $bright_gray_color: #eeeeee;
 $gunmetal_color: #2d3436;
 $chinease_silver_color: #cccccc;
+$link_water_color: #d2d5da;
+$auro_metal_saurus_color: #6d7280;
+$black_russian_color: #111827;
 
 $common_box_shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
