--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -4,7 +4,7 @@
 }
 
 .introduction {
-    padding-bottom: 80px;
+    padding-bottom: 160px;
 
     > p {
         font-size: 18px;
@@ -58,8 +58,20 @@
     margin-bottom: 40px;
 }
 
+.corporation {
+}
+
+.corporation_desc {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 80px;
+    opacity: 0;
+    position: relative;
+    top: 100px;
+    transition: opacity 1.5s, top 1.5s;
+}
+
 .service {
-    padding-top: 80px;
     padding-bottom: 80px;
     opacity: 0;
     position: relative;
@@ -68,7 +80,6 @@
 }
 
 .portfolio {
-    padding-top: 80px;
     opacity: 0;
     position: relative;
     top: 100px;
