--- a/styles/components/common_input.module.scss
+++ b/styles/components/common_input.module.scss
@@ -20,6 +20,7 @@
     position: absolute;
     left: 56px;
     color: $auro_metal_saurus_color;
+    z-index: -10;
 }
 
 .search_icon {
@@ -48,4 +49,5 @@
     border: none;
     outline: none;
     color: $auro_metal_saurus_color;
+    background-color: transparent;
 }
