--- a/styles/pages/service_center.module.scss
+++ b/styles/pages/service_center.module.scss
@@ -2,3 +2,81 @@
 
 .container {
 }
+
+.faq {
+}
+
+.title {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.search {
+    margin-bottom: 24px;
+}
+
+.items {
+}
+
+.items_item {
+    &:last-child {
+        > div {
+            border-bottom: 1px solid $link_water_color;
+        }
+    }
+}
+
+.items_item_container {
+}
+
+.items_item_container_question {
+    padding: 20px 10px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 21px;
+    color: $black_russian_color;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid $link_water_color;
+    border-left: 1px solid $link_water_color;
+    border-right: 1px solid $link_water_color;
+}
+
+.arrow {
+    width: 20px;
+    height: 20px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+
+    &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        mask-image: url("/images/icon/arrow_bottom.svg");
+        mask-repeat: no-repeat;
+        mask-position: center;
+        mask-size: contain;
+        transition: transform 0.2s;
+        background-color: $black_russian_color;
+    }
+}
+
+.arrow_active {
+    &::after {
+        transform: rotate(180deg);
+    }
+}
+
+.items_item_container_answer {
+    font-size: 14px;
+    font-weight: 400;
+    color: $auro_metal_saurus_color;
+    padding: 20px 32px;
+    border-top: 1px solid $link_water_color;
+    border-left: 1px solid $link_water_color;
+    border-right: 1px solid $link_water_color;
+}
