--- a/styles/components/common_input.module.scss
+++ b/styles/components/common_input.module.scss
@@ -18,7 +18,7 @@
 
 .placeholder {
     position: absolute;
-    left: 56px;
+    left: 20px;
     color: $auro_metal_saurus_color;
     z-index: -10;
 }
@@ -50,4 +50,17 @@
     outline: none;
     color: $auro_metal_saurus_color;
     background-color: transparent;
+}
+
+.text_area {
+    flex: 1;
+    height: 100%;
+    border: none;
+    outline: none;
+    color: $auro_metal_saurus_color;
+    background-color: transparent;
+    overflow-y: hidden;
+    resize: none;
+    vertical-align: middle;
+    z-index: 2;
 }
