--- a/styles/pages/service_center.module.scss
+++ b/styles/pages/service_center.module.scss
@@ -85,6 +85,12 @@
 .contact_us {
 }
 
+.desc {
+    font-size: 13px;
+    margin-bottom: 24px;
+    color: $auro_metal_saurus_color;
+}
+
 .form {
 }
 .fields {
