--- a/styles/pages/service_and_portfolio.module.scss
+++ b/styles/pages/service_and_portfolio.module.scss
@@ -1,3 +1,5 @@
+@import "../include.scss";
+
 .container {
 }
 
@@ -12,4 +14,47 @@
 }
 
 .area_title {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.portfolio_items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 350px);
+    grid-gap: 32px 24px;
+    justify-content: center;
+}
+
+.img_container {
+    cursor: pointer;
+    box-shadow: $common_box_shadow;
+    border-radius: 6px;
+    overflow: hidden;
+    width: 350px;
+    height: 230px;
+    transform: scale(0.97);
+    transition: transform 0.1s;
+    position: relative;
+
+    &:hover {
+        filter: brightness(0.9) grayscale(0.9);
+        transform: scale(1);
+    }
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+.img_label {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 500;
+    color: $auro_metal_saurus_color;
 }
