--- a/styles/pages/service_and_portfolio.module.scss
+++ b/styles/pages/service_and_portfolio.module.scss
@@ -11,6 +11,10 @@
         margin-top: -58px;
         visibility: hidden;
     }
+
+    &:not(&:last-child) {
+        margin-bottom: 80px;
+    }
 }
 
 .area_title {
@@ -36,6 +40,7 @@
     transform: scale(0.97);
     transition: transform 0.1s;
     position: relative;
+    margin-bottom: 12px;
 
     &:hover {
         filter: brightness(0.9) grayscale(0.9);
@@ -49,7 +54,7 @@
 }
 
 .img_label {
-    position: absolute;
+    // position: absolute;
     bottom: 20px;
     left: 0;
     width: 100%;
@@ -57,4 +62,39 @@
     font-size: 12px;
     font-weight: 500;
     color: $auro_metal_saurus_color;
+}
+
+.mockup {
+    margin-bottom: 32px;
+}
+
+.mockup_image_container {
+    width: 100%;
+
+    overflow: hidden;
+    margin-bottom: 32px;
+    box-sizing: border-box;
+
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+    }
+}
+
+.mockup_title {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 12px;
+}
+
+.mockup_desc {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
